grammar/test/corpus/comments.txt
================================================================================
Line comments
================================================================================

// This is a line comment
name = "Alice" // Comment at end of line
// Another comment

--------------------------------------------------------------------------------

(program
  (comment)
  (variable_declaration
    (identifier)
    (string_literal))
  (comment)
  (comment))

================================================================================
Block comments
================================================================================

/* This is a block comment */
/*
 * Multi-line
 * block comment
 */
value = 42

--------------------------------------------------------------------------------

(program
  (comment)
  (comment)
  (variable_declaration
    (identifier)
    (number_literal)))
